refactor: 북마크 Redis 캐싱 동기화 개선 및 테스트 환경 수정